update index.html and cosmetic changes
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7786 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/index.html
+++ b/en/index.html
@@ -15,10 +15,12 @@
 		<td>
 			<!-- BEGIN COPA HEADER -->
 			<div class="layoutHeader">
-				<div class="logos">
-					<a href="./../en/index.html"><img src="./../pictures/header/logo_copa.gif" width="183" height="70" alt=""></a>
-					<img src="./../pictures/header/logo_skyteam.gif" width="62" height="70" alt="">
-				</div>
+				<!-- BMI HEADER -->	
+			
+				<div class="headerStub"><img src="../pictures/header/header-stub.gif" width="930" height="104" alt=""></div>
+				
+				<!-- /BMI HEADER -->	
+				
 				<div class="blockUnderLogo">
 					<table cellpadding="0" cellspacing="0" border="0" class="blockUnderLogoContent">
 						<tr valign="top">
