Updated text in "Passengers Info" block concerning seat selection
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7812 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/pages-flight/6 Flight Confirmation.html
+++ b/en/pages-flight/6 Flight Confirmation.html
@@ -313,7 +313,7 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Airport Check-in<span class="ref">*</span></td>
+																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
 																</tr>
 															</table></div></td>
 												</tr>
@@ -366,7 +366,7 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Airport Check-in<span class="ref">*</span></td>
+																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
 																</tr>
 															</table></div></td>
 												</tr>
@@ -390,13 +390,13 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Airport Check-in<span class="ref">*</span></td>
+																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
 																</tr>
 															</table></div></td>
 												</tr>
 											</tbody>
 										</table>
-										<div class="footnote"><span class="ref">*</span> This flight is closed to pre-reserved seat selection. Please obtain your seat assignment at the airport upon check-in.</div></div>
+										<div class="footnote"><span class="ref">*</span> You may not pre-reserve a seat at this time. Please obtain your seat assignment at check-in up to 24 hours prior to departure.</div></div>
 									<div class="footerBlock">
 										<div><span></span></div></div></div>
 								<!-- /END PASSENGERS INFO BLOCK -->
