--- a/en/index.html
+++ b/en/index.html
@@ -44,7 +44,9 @@
 					<td class="layoutBodyWideArea">
 						<div style="padding:10px 0 29px 30px;font: 14px Arial;">
 							<a href="pages-flight/2 Flight Selection Calendar.html">Flexible Dates Search</a><br><br>
-							<a href="pages-flight/1 Flight Search RT.html">Advanced Search</a>							
+							<a href="pages-flight/1 Flight Search RT.html">Advanced Search</a><br><br>
+                            <a href="pages-flight/2 Flight Selection OWC No FF.html">Flight Selection OWC No FF</a><br><br>
+                            <a href="pages-flight/2 Flight Selection OWC.html">Flight Selection OWC</a>						
 						</div>
 					
 					</td>
