Updated index page
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7820 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/index.html
+++ b/en/index.html
@@ -45,8 +45,7 @@
 						<div style="padding:10px 0 29px 30px;font: 14px Arial;">
 							<a href="pages-flight/2 Flight Selection Calendar.html">Flexible Dates Search</a><br><br>
 							<a href="pages-flight/1 Flight Search RT.html">Advanced Search</a><br><br>
-                            <a href="pages-flight/2 Flight Selection OWC No FF.html">Flight Selection OWC No FF</a><br><br>
-                            <a href="pages-flight/2 Flight Selection OWC.html">Flight Selection OWC</a>						
+                            <a href="pages-flight/2 Flight Selection OWC.html">MultiDay OW Fares Tabbed View (+Fare Family)</a>						
 						</div>
 					
 					</td>
