Updated "Taxes and Fees" dialog: added example of multiple taxes with the same code.
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7833 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/popups/Popups.html
+++ b/en/popups/Popups.html
@@ -161,7 +161,7 @@ window.onload = function(){onloadGlobalHandler.execute()};
             </thead>
             <tbody class="groupOdd">
                 <tr class="rowFirst rowOdd">
-                    <td class="colPassenger" rowspan="10"><div>ADT</div></td>
+                    <td class="colPassenger" rowspan="12"><div>ADT</div></td>
                     <td class="colRate"><div><a href="#" onClick="popupFramework.show({id:'popupTaxDescription',ajaxConfig:{},opacity:true,templateName:'taxDescriptionPopup',size:{w:650},position:'centered'});return false">AY</a></div></td>
                     <td class="colDescr"><div>Passenger Civil Aviation Security Servic...</div></td>
                     <td class="colAmount"><div>USD 1.63</div></td>
@@ -182,8 +182,16 @@ window.onload = function(){onloadGlobalHandler.execute()};
             	<tr class="rowEven">
                     <td class="colRate"><div><a href="#" onClick="popupFramework.show({id:'popupTaxDescription',ajaxConfig:{},opacity:true,templateName:'taxDescriptionPopup',size:{w:650},position:'centered'});return false">XF</a></div></td>
                     <td class="colDescr"><div>San Francisco Passenger Facility Charge</div></td>
-                    <td class="colAmount"><div>USD 2.94</div></td>
-                    <td class="colTotal"><div>&nbsp;</div></td>
+                    <td class="colAmount" rowspan="3"><div>USD 2.94</div></td>
+                    <td class="colTotal" rowspan="3"><div>&nbsp;</div></td>
+                </tr>
+                <tr class="rowEven">
+                    <td class="colRate"><div><a href="#" onClick="popupFramework.show({id:'popupTaxDescription',ajaxConfig:{},opacity:true,templateName:'taxDescriptionPopup',size:{w:650},position:'centered'});return false">XF</a></div></td>
+                    <td class="colDescr"><div>Denver Passenger Facility Charge</div></td>
+                </tr>
+                <tr class="rowEven">
+                    <td class="colRate"><div><a href="#" onClick="popupFramework.show({id:'popupTaxDescription',ajaxConfig:{},opacity:true,templateName:'taxDescriptionPopup',size:{w:650},position:'centered'});return false">XF</a></div></td>
+                    <td class="colDescr"><div>Washington National Passenger Facility Charge</div></td>
                 </tr>
                 <tr class="rowOdd">
                     <td class="colRate"><div><a href="#" onClick="popupFramework.show({id:'popupTaxDescription',ajaxConfig:{},opacity:true,templateName:'taxDescriptionPopup',size:{w:650},position:'centered'});return false">XY</a></div></td>
