Updated "Fare Breakdown" popup: removed footnote
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7834 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/popups/Popups.html
+++ b/en/popups/Popups.html
@@ -527,7 +527,7 @@ window.onload = function(){onloadGlobalHandler.execute()};
                     <td class="colPrice"><div>x 2</div></td>
                     <td class="colLast colPrice"><div><b>USD 600.00</b></div></td>
                 </tr>
-                <tr class="rowLast rowEven">
+                <tr class="rowEven">
                     <td class="colFirst"><div>Child</div></td>
                     <td class="colPrice"><div>150.00</div></td>
                     <td class="colPrice"><div>25.00</div></td>
@@ -536,13 +536,16 @@ window.onload = function(){onloadGlobalHandler.execute()};
                     <td class="colPrice"><div>x 1</div></td>
                     <td class="colLast colPrice"><div><b>USD 200.00</b></div></td>
                 </tr>
+                <tr class="rowLast rowOdd">
+                    <td class="colFirst" colspan="6"><div>Booking Fee</div></td>
+                    <td class="colLast colPrice"><div><b>USD 5.00</b></div></td>
+                </tr>
                 <tr class="rowTotal">
                 	<td class="colFirst colSubheader" colspan="6"><div>TOTAL</div></td>
-                    <td class="colLast colPrice"><div><b>USD 800.00</b></div></td>
+                    <td class="colLast colPrice"><div><b>USD 805.00</b></div></td>
                 </tr>
             </tbody>
             </table>
-            <div class="footnote">This Total includes selected items, taxes, and surcharges and booking fees.</div>
 		</div>
 	</div>
 	<div class="dialogFooter">
