update seats according to JIRA TDP-12773
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7859 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/pages-flight/6 Flight Confirmation.html
+++ b/en/pages-flight/6 Flight Confirmation.html
@@ -312,7 +312,15 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
+																	<td class="colDetailDescr">
+																		<table class="seatsDescr">
+																			<tr>
+																				<td>
+																					<div>*</div></td>
+																				<td>
+																					<div>23A</div></td>
+																			</tr>
+																		</table></td>
 																</tr>
 															</table></div></td>
 												</tr>
@@ -365,7 +373,15 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
+																	<td class="colDetailDescr">
+																		<table class="seatsDescr">
+																			<tr>
+																				<td>
+																					<div>*</div></td>
+																				<td>
+																					<div>23B</div></td>
+																			</tr>
+																		</table></td>
 																</tr>
 															</table></div></td>
 												</tr>
@@ -389,7 +405,15 @@ function registerJS(jsName){
 																</tr>
 																<tr>
 																	<td class="colDetailName">Seat</td>
-																	<td class="colDetailDescr">Check-In 24hrs Prior to Departure<span class="ref">*</span></td>
+																	<td class="colDetailDescr">
+																		<table class="seatsDescr">
+																			<tr>
+																				<td>
+																					<div>*</div></td>
+																				<td>
+																					<div>23C</div></td>
+																			</tr>
+																		</table></td>
 																</tr>
 															</table></div></td>
 												</tr>
