--- a/en/popups/Popups.html
+++ b/en/popups/Popups.html
@@ -885,6 +885,58 @@ window.onload = function(){onloadGlobalHandler.execute()};
 </div>
 <!-- /Seat Map Popup -->
 
+<!-- Exit Row Terms Popup -->
+<div id="popupModuleExitRowTerms" class="defaultDialogFrame">
+ 	<div class="dialogHeader">
+		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="dialogHeaderInner">
+		<tr>
+			<td width="100%" class="dialogTitle">Exit Row Terms and Conditions</td>
+			<td nowrap="nowrap" class="dialogClose"><a href="#" onClick="seatMapFramework.exitRowAgreement.onClickNo({id:'popupModuleExitRowTerms'});return false">Close<img src="../../pictures/icons/i_dialog_close.gif" width="11" height="11" alt=""/></a></td>
+		</tr>
+		</table>
+	</div> 
+    <div class="dialogBrandHead"><div class="dialogHeadBg"><div class="dialogLogo"></div></div></div> 
+	<div class="dialogContent" id="exitRowTermsPopupLoadedContent">
+		<div class="popupBlockExitRowTerms">
+			<!-- content -->
+			<h3>You have selected a seat in the exit row.</h3>
+			<div class="exitRowTermsInfo dialogFloatContent">
+				<div class="bodyBlock">			
+					<p>Passengers sitting in an exit seat must be able to meet the following criteria and perform the following duties:</p>
+					<ul>
+						<li>Have sufficient mobility, strength, or dexterity in both arms, hands, and legs to perform such duties as removing the door, remove obstructions and help other passengers exit the aircraft. </li>
+						<li>Be 15 years of age or older and have the capacity to perform the listed duties without assistance of an adult companion, parent, or other relative.  </li>
+						<li>Be able to read and understand instructions related to emergency evacuation which are provided in printed or graphic form and be able to understand oral commands given by a crewmember in the English language.  </li>
+						<li>Be able to see well enough to perform the listed duties and assess conditions outside of the exit without the assistance of visual aids other than contacts or eyeglasses.  </li>
+						<li>Be able to hear well enough to understand instructions shouted by crewmembers without assistance other than a hearing aid.  </li>
+						<li>Be able to speak well enough to give information orally to other passengers.  </li>
+						<li>Be free from the responsibility of caring for someone who cannot be left unattended for the duration of the flight.  </li>
+						<li>Be free from any condition that might cause harm if the passenger were to perform one or more of the listed duties.  </li>
+						<li>Be able to occupy the exit seat without use of a seatbelt extension (additional belt length can be an entanglement hazard for those exiting quickly). </li>
+					</ul>
+				</div>	
+			</div>
+			<div class="exitRowConfirmation"><input type="checkbox" value="1" onclick="document.getElementById('popupExitRowTermsButtonYes').style.display=(this.checked)?'':'none';document.getElementById('popupExitRowTermsButtonYesDisabled').style.display=(this.checked)?'none':'';" id="checkboxExitRowConfirmation"> <label for="checkboxExitRowConfirmation">I accept the terms and conditions of this seat.</label></div>
+            <!-- /content -->
+		</div>
+	</div>
+	<div class="dialogFooter">
+		<table cellspacing="0" cellpadding="0" border="0">
+			<tr>
+            	<td>
+					<a href="#" id="popupExitRowTermsButtonYes" class="button2" style="display:none" onClick="seatMapFramework.exitRowAgreement.onClickYes({id:'popupModuleExitRowTerms'});return false"><span><span>Yes</span></span></a>
+					<span class="button2Disabled" id="popupExitRowTermsButtonYesDisabled"><span><span>Yes</span></span></span>					
+				</td>
+                <td>
+					<a href="#" class="button2" onClick="seatMapFramework.exitRowAgreement.onClickNo({id:'popupModuleExitRowTerms'});return false"><span><span>No</span></span></a>
+				</td>
+			</tr>
+		</table>	
+	</div> 
+</div>
+<!-- /Exit Row Terms Popup -->
+
+
 <!-- Air Terms Popup -->
 <div id="popupModuleAirTerms" class="defaultDialogFrame">
  	<div class="dialogHeader">
