update of exit row terms popup
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7892 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/popups/Popups.html
+++ b/en/popups/Popups.html
@@ -895,12 +895,11 @@ window.onload = function(){onloadGlobalHandler.execute()};
 		</tr>
 		</table>
 	</div> 
-    <div class="dialogBrandHead"><div class="dialogHeadBg"><div class="dialogLogo"></div></div></div> 
 	<div class="dialogContent" id="exitRowTermsPopupLoadedContent">
 		<div class="popupBlockExitRowTerms">
 			<!-- content -->
 			<h3>You have selected a seat in the exit row.</h3>
-			<div class="exitRowTermsInfo dialogFloatContent">
+			<div class="exitRowTermsInfo">
 				<div class="bodyBlock">			
 					<p>Passengers sitting in an exit seat must be able to meet the following criteria and perform the following duties:</p>
 					<ul>
