Updated "Insurance Cross Sell" block: added "Policy Number" string
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7902 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/pages-flight/6 Flight Confirmation.html
+++ b/en/pages-flight/6 Flight Confirmation.html
@@ -749,7 +749,7 @@ function registerJS(jsName){
 																<td class="colIcon">
 																	<div><img src="../../pictures/content/logo_insurance1.gif" width="102" height="24" alt="AIG Travel Guard" /></div></td>
 																<td class="colInfo">
-																	<div>
+																	<div><span class="policyNum">Policy Number: PAGGB2000000731</span><br /><br />
 												Travel insurance includes reimbursement for: Trip Cancellation or Interruption; Travel Delay; Lost, Stolen or Damaged Baggage; 
 												Baggage Delay; 24-hour travel assistance.<br />International travel insurance plans include Medical and Emergency Medical Transportation coverage.<br /><br />
 												Click <a href="#">here</a> to learn more and read all limitations and policy restrictions.
