--- a/en/pages-flight/3 Flight Summary.html
+++ b/en/pages-flight/3 Flight Summary.html
@@ -585,10 +585,9 @@ function registerJS(jsName){
 																	<div><img src="../../pictures/content/logo_insurance1.gif" width="102" height="24" alt="AIG Travel Guard" /></div></td>
 																<td class="colInfo">
 																	<div>
-												Travel insurance includes reimbursement for: Trip Cancellation or Interruption; Travel Delay; Lost, Stolen or Damaged Baggage; 
-												Baggage Delay; 24-hour travel assistance.<br />International travel insurance plans include Medical and Emergency Medical Transportation coverage.<br /><br />
-												Click <a href="#">here</a> to learn more and read all limitations and policy restrictions.
-											</div></td>
+																		<p>Travel insurance includes reimbursement for: Trip Cancellation or Interruption; Travel Delay; Lost, Stolen or Damaged Baggage; 
+												Baggage Delay; 24-hour travel assistance.<br />International travel insurance plans include Medical and Emergency Medical Transportation coverage.</p>
+																		<p>Click <a href="#">here</a> to learn more and read all limitations and policy restrictions.</p></div></td>
 															</tr>
 														</tbody>
 													</table></div></div>
