Changed all page headers to "Consumer IBE"
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@8189 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/pages-common/Error 404.html
+++ b/en/pages-common/Error 404.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>DLEXPRD</title>
+<title>Consumer IBE</title>
 <script language="JavaScript" type="text/javascript">
 <!--		
 function registerJS(jsName){
