--- a/en/pages-common/Interstitial Page.html
+++ b/en/pages-common/Interstitial Page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>DLEXPRD</title>
+<title>Consumer IBE</title>
 	<link rel="STYLESHEET" type="text/css" href="../../css/all.css">
 </head>
 <body class="pgInterstSearch">
