--- a/en/popups/Popups.html
+++ b/en/popups/Popups.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>DLEXPRD</title>
+<title>Consumer IBE</title>
 <link rel="stylesheet" type="text/css" href="../../css/all.css"/>
 <script src="../../js/global.js" type="text/javascript"></script>
 <script>
