--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>DLEXPRD</title>
+<title>Consumer IBE</title>
 <link rel="stylesheet" type="text/css" href="./../css/all.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="./../css/print.css" media="print" />
 </head>
