--- a/en/pages-profile/Profile - Account Settings (AIS)-error.html
+++ b/en/pages-profile/Profile - Account Settings (AIS)-error.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>DLEXPRD</title>
+<title>Consumer IBE</title>
 <script language="JavaScript" type="text/javascript">
 <!--		
 function registerJS(jsName){
