Global replace of text on Interstitial pages from "It may take up to 60 seconds to process your request" to "We are processing your request"
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@15314 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/en/pages-common/Interstitial Page.html
+++ b/en/pages-common/Interstitial Page.html
@@ -16,7 +16,7 @@
 				<div class="bar"></div>
 				<div class="text">
 					Please do not click the refresh, back or stop buttons until selection page is displayed. <br />
-					It may take up to 60 seconds to process your request.
+					We are processing your request.
 				</div> 				
 			</div>
 		</div>
